7112478: after 7105605 JRuby bench_define_method_methods.rb fails with NPE

Fixed several EA issues with Connection Graph construction.

Reviewed-by: never, twisti